[gd_scene load_steps=13 format=2]

[ext_resource path="res://arial_narrow_7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://BebasNeue-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://large_font.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.235294, 0.243137, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.933333, 0.0745098, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.446186, 0.0705882, 0.588235, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.227451, 0.670588, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.878431, 0.788235, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=8]
size = 47
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 33.0
margin_top = 33.0
margin_right = 250.0
margin_bottom = 153.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "123"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThousandsLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 49.1599
margin_top = 466.462
margin_right = 266.16
margin_bottom = 558.462
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HundredsLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 278.677
margin_top = 466.462
margin_right = 495.677
margin_bottom = 558.462
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TensLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 510.572
margin_top = 466.462
margin_right = 727.572
margin_bottom = 558.462
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnesLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 743.657
margin_top = 466.462
margin_right = 960.657
margin_bottom = 558.462
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowButton" type="Button" parent="CanvasLayer/Control"]
anchor_bottom = 0.021
margin_left = 261.0
margin_top = 32.0
margin_right = 446.0
margin_bottom = 139.4
custom_fonts/font = SubResource( 8 )
text = "SHOW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyboard" parent="CanvasLayer/Control" instance=ExtResource( 2 )]
position = Vector2( 451.8, 11.9714 )

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_left = 65.977
margin_top = 417.29
margin_right = 245.977
margin_bottom = 455.29
custom_fonts/font = SubResource( 7 )
text = "Thousands"

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
margin_left = 306.184
margin_top = 417.29
margin_right = 486.184
margin_bottom = 455.29
custom_fonts/font = SubResource( 7 )
text = "Hundreds"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/Control"]
margin_left = 579.0
margin_top = 417.0
margin_right = 670.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 7 )
text = "Tens"

[node name="Label4" type="Label" parent="CanvasLayer/Control"]
margin_left = 813.595
margin_top = 417.0
margin_right = 904.595
margin_bottom = 455.0
custom_fonts/font = SubResource( 7 )
text = "Ones"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Control/ShowButton" to="." method="_on_ShowButton_pressed"]
